--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
+    "tailwindcss": "^1.8.10",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
